# setup-environment-srodriguezicomp

./: .gitignore  CMakeLists.txt  Doxyfile
.github/actions/coverage_and_test/: action.yml
Testing/: TAG
Testing/20240325-0036/: Test.xml
Testing/20240325-0037/: Test.xml
include/: greetings.h  logic.h
lib/libdyn/: CMakeLists.txt
lib/libdyn/include/: dynamic.h
lib/libdyn/src/: dynamic.c
lib/libstat/: CMakeLists.txt
lib/libstat/include/: static.h
lib/libstat/src/: static.c
src/: greetings.c  logic.c  program.c
test/: CMakeLists.txt
test/unit/: unit_test_program.c
